➕ dependencies and setup dev environment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "cSpell.words": [
-        "moyai"
-    ]
+        "neoo","mikro"
+    ],
+    "prettier.configPath": ".prettierrc",
+    "prettier.endOfLine": "auto"
 }
