--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "moyai-server",
+	"name": "neoo-server",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "dist/index.js",
 	"scripts": {
 		"watch": "tsc -w",
 		"dev": "nodemon dist/index.js"
@@ -11,8 +11,33 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/express": "^4.17.7",
 		"@types/node": "^14.6.0",
+		"@typescript-eslint/eslint-plugin": "^3.10.1",
+		"@typescript-eslint/parser": "^3.10.1",
+		"dotenv": "^8.2.0",
+		"eslint": "^7.7.0",
+		"eslint-plugin-prettier": "^3.1.4",
 		"nodemon": "^2.0.4",
+		"ts-node": "^9.0.0",
 		"typescript": "^4.0.2"
+	},
+	"dependencies": {
+		"@mikro-orm/cli": "^4.0.0-alpha.0",
+		"@mikro-orm/core": "^4.0.0-alpha.0",
+		"@mikro-orm/migrations": "^4.0.0-alpha.0",
+		"@mikro-orm/postgresql": "^4.0.0-alpha.0",
+		"apollo-server-express": "^2.17.0",
+		"express": "^4.17.1",
+		"graphql": "^15.3.0",
+		"pg": "^8.3.3",
+		"type-graphql": "^1.0.0"
+	},
+	"mikro-orm": {
+		"useTsNode": true,
+		"configPaths": [
+			"./src/mikro-orm.config.ts",
+			"./dist/mikro-orm.config.js"
+		]
 	}
 }
