--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "dist/index.js",
 	"scripts": {
-		"watch": "tsc -w",
+		"watch": "rm -rf ./dist; tsc -w",
 		"dev": "nodemon dist/index.js"
 	},
 	"keywords": [],
@@ -31,6 +31,7 @@
 		"express": "^4.17.1",
 		"graphql": "^15.3.0",
 		"pg": "^8.3.3",
+		"reflect-metadata": "^0.1.13",
 		"type-graphql": "^1.0.0"
 	},
 	"mikro-orm": {
