--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,24 +1,23 @@
-node_modules
-.env
-dist
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-
-frontend/.pnp
-frontend/.pnp.js
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
 # testing
-frontend/coverage
+/coverage
 
 # next.js
-frontend/.next/
-frontend/out/
+/.next/
+/out/
 
 # production
-frontend/build
+/build
 
 # misc
-frontend/.DS_Store
-frontend/*.pem
+.DS_Store
+*.pem
 
 # debug
 npm-debug.log*
@@ -32,4 +31,4 @@ yarn-error.log*
 .env.production.local
 
 # vercel
-frontend/.vercel
+.vercel
