--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@ant-design/icons": "4.2.1",
 		"@next/bundle-analyzer": "^9.1.4",
+		"@urql/exchange-graphcache": "^3.0.2",
 		"antd": "4.3.0",
 		"babel-plugin-import": "1.13.0",
 		"cross-env": "^7.0.2",
