--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,13 @@
 		"formik": "^2.1.5",
 		"formik-antd": "^2.0.1",
 		"graphql": "^15.3.0",
+		"isomorphic-unfetch": "^3.0.0",
 		"next": "latest",
+		"next-urql": "^1.1.0",
 		"postcss-preset-env": "^6.7.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-is": "^16.13.1",
 		"urql": "^1.10.0",
 		"yup": "^0.29.3"
 	},
