--- a/server/package.json
+++ b/server/package.json
@@ -28,10 +28,6 @@
 		"typescript": "^4.0.2"
 	},
 	"dependencies": {
-		"@mikro-orm/cli": "^4.0.0-alpha.0",
-		"@mikro-orm/core": "^4.0.0-alpha.0",
-		"@mikro-orm/migrations": "^4.0.0-alpha.0",
-		"@mikro-orm/postgresql": "^4.0.0-alpha.0",
 		"apollo-server-express": "^2.17.0",
 		"argon2": "^0.27.0",
 		"connect-redis": "^5.0.0",
@@ -42,7 +38,8 @@
 		"pg": "^8.3.3",
 		"redis": "^3.0.2",
 		"reflect-metadata": "^0.1.13",
-		"type-graphql": "^1.0.0"
+		"type-graphql": "^1.0.0",
+		"typeorm": "^0.2.25"
 	},
 	"mikro-orm": {
 		"useTsNode": true,
