--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
 		"antd": "4.3.0",
 		"babel-plugin-import": "1.13.0",
 		"cross-env": "^7.0.2",
+		"date-fns": "^2.16.1",
 		"dayjs": "1.8.28",
 		"esm": "^3.2.25",
 		"formik": "^2.1.5",
 		"formik-antd": "^2.0.1",
 		"graphql": "^15.3.0",
+		"graphql-tag": "^2.11.0",
 		"isomorphic-unfetch": "^3.0.0",
 		"next": "latest",
 		"next-urql": "^1.1.0",
